# Pascal2C

./: .clangd  README.md
Pascal2C/: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
Pascal2C/.cache/clangd/index/: ast.cpp.C4CCCCD2BE10DA59.idx  ast.h.C1FCE380A70F93DF.idx  code_generator.cpp.FB0D4967E396C0BF.idx  code_generator.h.9D989E2A8FAADB9D.idx  main.cpp.36227D0C2A497843.idx  pascal_lexer.cpp.9DB64273B1213245.idx  pascal_lexer.h.E9E35699941A4454.idx  pascal_parser.cpp.C72F8B3ADCB97F5F.idx  pascal_parser.h.9AAB9C05FFAA4222.idx  pascal_parser.hpp.74968B13C66868B1.idx  symbol_table.cpp.84D83E13EC4FD0F0.idx  symbol_table.h.F96E50A5A39F0AA7.idx  test_ast.cpp.2C70B1C08D670DAC.idx  test_code_generator.cpp.51089EA50EC2E6EB.idx  test_lexer.cpp.48409652CEE464A1.idx  test_parser.cpp.F89A3A298F5EA1D1.idx  test_symbol_table.cpp.D9E353F53A367D90.idx
Pascal2C/examples/: hello.c  hello.pas
Pascal2C/include/: ast.h  code_generator.h  symbol_table.h
Pascal2C/src/: CMakeLists.txt  ast.cpp  code_generator.cpp  main.cpp  pascal_lexer.cpp  pascal_lexer.h  pascal_lexer.l  pascal_parser.cpp  pascal_parser.h  pascal_parser.hpp  pascal_parser.y  symbol_table.cpp
Pascal2C/tests/: CMakeLists.txt  code_generator_test.cpp  pascal_lexer_test.cpp  pascal_parser_test.cpp  symbol_table_test.cpp
Pascal2C/tests/test_samples/: generator_test.pas  lexer_test.pas  parser_test.pas
toolchains-use/ANTLR/: doucument.txt
toolchains-use/ANTLR/level_3/: code.c
toolchains-use/antlr/: C1Parser.g4
toolchains-use/arm/: grading.sh
toolchains-use/arm/src/: bubble.s  sort.c
toolchains-use/gcc-Clang/: makefile.txt  sort.c
toolchains-use/lex&yacc/: calculator.y  gc_content.c  scanner.l
toolchains-use/llvm-ir/level-1/: fib.c  gen_fib.cpp
toolchains-use/risc-v/: grading.sh
toolchains-use/risc-v/src/: bubble.s  sort.c
toolchains-use/toolchains/: cmd.bash
